--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         routerLink="/manage"
         class="text-lg font-semibold hover:underline hover:text-gray-300 transition"
       >
-        Manage
+        Build Your PC
       </a>
     </div>
   </header>
