--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="min-h-screen bg-black text-white">
-  <header class="flex items-center justify-between h-16 px-6 bg-gray-900 border-b border-gray-700">
+  <header class="flex items-center justify-between h-16 px-6 bg-black border-b border-black-700">
     <div class="space-x-4">
       <a
         routerLink="/"
@@ -18,6 +18,5 @@
 
   <main class="p-6">
     <router-outlet></router-outlet>
-    <app-cart></app-cart>
   </main>
 </div>
